# Cortex

./: settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cortex_jni.cpp
app/src/main/java/com/warden/cortex/: LlamaBridge.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
